<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_indent"
                android:layout_marginBottom="@dimen/button_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin_large"
                    android:text="@string/registration_activity_title"
                    style="@style/TitleStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin_large"
                    android:text="@string/registration_activity_user_name"
                    style="@style/TextStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/gray_for_hint"
                    app:boxStrokeColor="@color/gray_for_hint"
                    android:divider="@color/gray_for_hint" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEdText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        style="@style/TextStyle"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin_large"
                    android:text="@string/registration_activity_user_email"
                    style="@style/TextStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/gray_for_hint"
                    app:boxStrokeColor="@color/gray_for_hint"
                    android:divider="@color/gray_for_hint" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        style="@style/TextStyle"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin_large"
                    android:text="@string/registration_activity_password"
                    style="@style/TextStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstPasswordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/gray_for_hint"
                    app:endIconMode="password_toggle"
                    app:endIconDrawable="@drawable/custom_password_toggle"
                    app:endIconTint="@color/purple_500"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/gray_for_hint"
                    app:boxStrokeColor="@color/gray_for_hint" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstPasswordEdText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        style="@style/TextStyle"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin_large"
                    android:text="@string/registration_activity_repeat_password"
                    style="@style/TextStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/secondPasswordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/gray_for_hint"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle"
                    app:endIconDrawable="@drawable/custom_password_toggle"
                    app:endIconTint="@color/purple_500"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/gray_for_hint"
                    app:boxStrokeColor="@color/gray_for_hint" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secondPasswordEdText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        style="@style/TextStyle"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrationBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/standard_indent"
            android:text="@string/registration_activity_title"
            android:layout_alignParentBottom="true"
            android:enabled="false"
            style="@style/PurpleButtonStyle"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_500"
        android:visibility="invisible"/>

</RelativeLayout>